--- a/templates/contact.html
+++ b/templates/contact.html
@@ -1,25 +1,13 @@
 {% load static %}
-<!DOCTYPE html>
-<html lang="en">
-<head>
-	<meta charset="UTF-8">
-	<title>Contact</title>
-	<link rel="stylesheet" href="{ % static 'CSS/style3.css'%}">
-</head>
-<body>
-	<div class="wrapper">
-			<nav class="navbar">
-				<img class="logo" src="66.png">
-				<ul>
-					<li><a class="active" href="home.html">Home</a></li>
-					<li><a href="service.html">Services</a></li>
-					<li><a href="about.html">About</a></li>
-					<li><a href="contact.html">Contact</a></li>
-					<li><a href="register.html">Sign Up</a></li>
-				</ul>
 
+{% extends "base.html" %}
 
+{% block style %}
+<link rel="stylesheet" href="{ % static 'CSS/style3.css'%}">
+{% endblock style %}
+	
 
+{% block content  %}
   <div class="contact-form">
     <h1>Contact Us</h1>
     <div class="txtb">
@@ -44,6 +32,4 @@
     <a class="btn">Send</a>
   </div>
 
-</div>
-</body>
-</html>
+{% endblock content  %}
