--- a/templates/service.html
+++ b/templates/service.html
@@ -23,7 +23,7 @@
 
     <div class="form-group">
 
-      <button id="start-btn"class="btn btn-danger btn-block">
+      <button id="recordButton"class="btn btn-danger btn-block">
 
       Speak
       </button>
@@ -39,7 +39,7 @@
 
 {% block js %}
  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script src="{% static 'js/script.js' %}"></script>
+    <script src="{% static 'JS/script.js' %}"></script>
 
 
 {% endblock js %}
