--- a/templates/base.html
+++ b/templates/base.html
@@ -4,7 +4,7 @@
 <head>
 	
 	<meta charset="UTF-8">
-	<title>Home</title> 
+	<title> {{title}} </title> 
 	<link rel="stylesheet" href="{% static 'CSS/style.css'%}">
 	
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
